--- a/LogicielNettoyagePC/MainWindow.xaml
+++ b/LogicielNettoyagePC/MainWindow.xaml
@@ -21,7 +21,7 @@
         <Rectangle HorizontalAlignment="Center" Height="12" Margin="0,175,0,0" Stroke="Black" VerticalAlignment="Top" Width="1000" Fill="#FFF9F9F9" StrokeThickness="0"/>
 
         <!-- Content -->
-        <Button x:Name="nettoyer_btn" Content="&#xA;NETTOYER" HorizontalAlignment="Left" Margin="29,208,0,0" VerticalAlignment="Top" Height="175" Width="453" Background="#FF007791" Foreground="White" BorderThickness="6,6,6,6" BorderBrush="White" FontFamily="Arial" FontSize="26" FontWeight="Bold" />
+        <Button x:Name="Nettoyer_btn" Content="&#xA;NETTOYER" HorizontalAlignment="Left" Margin="29,208,0,0" VerticalAlignment="Top" Height="175" Width="453" Background="#FF007791" Foreground="White" BorderThickness="6,6,6,6" BorderBrush="White" FontFamily="Arial" FontSize="26" FontWeight="Bold" Click="Nettoyer_btn_Click"/>
         <Image Source="/sweeping.png" Margin="216,229,690,382" Visibility="Visible" IsHitTestVisible="False"  />
         <Button x:Name="miss_a_jour_btn" Content="&#xA;MISE A JOUR" HorizontalAlignment="Left" Margin="29,388,0,0" VerticalAlignment="Top" Height="175" Width="453" Background="#FF007791" Foreground="White" BorderThickness="6,6,6,6" BorderBrush="White" FontFamily="Arial" FontSize="26" FontWeight="Bold" Click="Miss_a_jour_btn_Click"/>
         <Image Source="/update.png" Margin="205,404,694,207" Visibility="Visible" IsHitTestVisible="False"  />
